plugins {
    id 'java-library'
    id 'maven-publish'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'application'
}

group = "net.minheur"
version = "8.0.1"

def javafxversion = "21.0.7"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
    withJavadocJar()
}


javadoc {
    options.links(
            "https://openjfx.io/javadoc/21/",
            "https://javadoc.io/doc/org.reflections/reflections/0.10.2/",
            "https://javadoc.io/doc/com.google.code.gson/gson/2.11.0/",
            "https://javadoc.io/doc/org.jetbrains/annotations/24.1.0/"
    )
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = "potoflux"
        }
    }

    repositories {
        maven {
            name 'GitHubPackages'
            url = uri("https://maven.pkg.github.com/TechnoMastery/PotoFlux")
            credentials {
                username = project.findProperty("gpr.user")
                password = project.findProperty("gpr.key")
            }
        }
    }
}

javafx {
    version '21'
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.media' ]
}

repositories {
    mavenCentral()
    maven {
        name = "SpongePowered"
        url = uri("https://repo.spongepowered.org/repository/maven-public/")
    }
    maven {
        name = "MinecraftLibraries"
        url = uri("https://libraries.minecraft.net/")
    }
}

dependencies {
    implementation "org.openjfx:javafx-controls:$javafxversion"
    implementation "org.openjfx:javafx-graphics:$javafxversion"
    implementation "org.openjfx:javafx-media:$javafxversion"

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    api 'com.google.code.gson:gson:2.11.0'
    api "org.jetbrains:annotations:24.1.0"

    // scan classes
    implementation "org.reflections:reflections:0.10.2"

    // early class transformation
    implementation "org.ow2.asm:asm:9.7.1"
    implementation "org.spongepowered:mixin:0.8.5"
    implementation "net.minecraft:launchwrapper:1.12"

    // themes
    implementation("io.github.mkpaz:atlantafx-base:2.1.0")

}

jar {
    manifest {
        attributes(
                'Main-Class': 'net.minheur.potoflux.boot.PotoFluxBoot',
                'Implementation-Version': project.version
        )
    }
}

processResources {
    filesMatching("version.properties") {
        expand "version": version
    }
}

tasks.register("generateVersionProperties") {
    def outputDir = file("$buildDir/generated/resources")
    outputs.dir outputDir

    doLast {
        outputDir.mkdirs()
        def file = new File(outputDir, "version.properties")
        file.text = "version=${project.version}"
    }
}

sourceSets.main.resources.srcDir("$buildDir/generated/resources")

tasks.processResources.dependsOn(generateVersionProperties);

tasks.register("copyLibs", Copy) {
    dependsOn "build"

    group = "potoflux"
    description = "copy all libs to the build folder"

    doFirst {
        delete("$buildDir/libs/build")
    }

    from configurations.runtimeClasspath
    into "$buildDir/libs/build/lib/"
}

build.dependsOn jar

tasks.register("copyJfx", Copy) {
    from configurations.runtimeClasspath
    include "javafx-*.jar"
    into "$buildDir/libs/build/lib/"
}

tasks.named("run", JavaExec) {
    group = "potoflux"
    description = "Run PotoFlux"

    classpath = sourceSets.main.runtimeClasspath
    mainClass.set("net.minheur.potoflux.boot.PotoFluxBoot")

    args("devEnv")
}

tasks.named("sourcesJar") {
    dependsOn(generateVersionProperties)

    exclude("**/*.json", "**/*.toml", "**/*.lang")
}

tasks.register("copyJar", Copy) {
    mustRunAfter("copyLibs")

    group = "potoflux"
    description = "copy .jar file to build dir"

    from "$buildDir/libs/PotoFlux-$version" + ".jar"
    into "$buildDir/libs/build/"
}

tasks.register("msiPackage") {
    dependsOn("build", "copyLibs", "copyJar", "copyJfx")

    group = "potoflux"
    description = "build as msi installer"

    mkdir("$buildDir/libs/output")

    def javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }.get()

    doLast {
        exec {
            commandLine "jpackage",
            "--input", "$buildDir/libs/build",
            "--name", "PotoFlux",
            "--main-jar", "PotoFlux-$version" + ".jar",
            "--main-class", "net.minheur.potoflux.boot.PotoFluxBoot",

            "--type", "msi",
            "--dest", "$buildDir/libs/output",

            "--runtime-image", javaLauncher.metadata.installationPath.asFile.absolutePath,

            "--java-options", "--module-path=\$APPDIR\\lib --add-modules=javafx.controls,javafx.graphics,javafx.media -Xmx512m",

            "--win-dir-chooser",
            "--install-dir", "TechnoMastery/PotoFlux",
            "--win-shortcut",
            "--win-menu",

            "--app-version", "$version",
            "--icon", "$buildDir/libs/main.ico",
            "--win-upgrade-uuid", "5536eb5f-55c0-408d-b034-677536a3a078"
        }
    }
}
tasks.register("rpmPackage") {
    dependsOn("build", "copyLibs", "copyJar", "copyJfx")

    group = "potoflux"
    description = "build as rpm installer"

    mkdir("$buildDir/libs/output")

    def javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }.get()

    doLast {
        exec {
            commandLine "jpackage",
            "--input", "$buildDir/libs/build",
            "--name", "PotoFlux",
            "--main-jar", "PotoFlux-$version" + ".jar",
            "--main-class", "net.minheur.potoflux.boot.PotoFluxBoot",

            "--type", "rpm",
            "--dest", "$buildDir/libs/output",

            "--runtime-image", javaLauncher.metadata.installationPath.asFile.absolutePath,

            "--java-options", "--module-path=\$APPDIR/lib --add-modules=javafx.controls,javafx.graphics,javafx.media -Xmx512m",

            "--install-dir", "/opt/potoflux",

            "--app-version", "$version",
            "--icon", "$buildDir/libs/main.png"
        }
    }
}
